test/syntax-errors/no-such-import/no-such-import.foster
snafuinclude DNE "does-not-exist";

main = { () };

